--- a/Setting-Up-Google-In-App-Billing.asciidoc
+++ b/Setting-Up-Google-In-App-Billing.asciidoc
@@ -6,27 +6,35 @@ So here are some modified steps to prepare your project (from a unix command lin
 
 The first step is to add the interface definition to your project.
 
+```shell
 pushd $PROJECT
 mkdir -p android/src/com/android/vending/billing/
 cp $ANDROID_HOME/extras/google/play_billing/samples/TrivialDrive/src/com/android/vending/billing/IInAppBillingService.aidl android/src/com/android/vending/billing/
 ./gradlew android:assembleRelease
 popd
+```
 
 If this has been successful, you should find the generated java source in 
 
+```shell
 $PROJECT/android/build/generated/source/aidl/release/com/android/vending/billing/IInAppBillingService.java
+```
 
 The next step is to add the "utils" from the example TrivialDrive project, and update their package
 
+```shell
 pushd $PROJECT
 mkdir -p android/src/$YOURPROJECTDIR/util
 cp $ANDROID_HOME/extras/google/play_billing/samples/TrivialDrive/src/com/example/android/trivialdrivesample/util/* android/src/$YOURPROJECTDIR/util
 sed -e 's/com.example.android.trivialdrivesample.util/$YOURPROJECTPACKAGE.util/g' -i'' android/src/$YOURPROJECTDIR/util/*.java
 popd
+```
 
 You can check that the magic sed file changing line worked by checking the diff output..
 
+```shell
 diff -u android/src/$YOURPROJECTDIR/util/ $ANDROID_HOME/extras/google/play_billing/samples/TrivialDrive/src/com/example/android/trivialdrivesample/util/
+```
 
 The only changed lines should be the package declarations.
 
