Updated Gradle on the Commandline (markdown => mediawiki)

--- a/Gradle-on-the-Commandline.mediawiki
+++ b/Gradle-on-the-Commandline.mediawiki
@@ -78,11 +78,64 @@ This will create a runnable JAR file located in the `desktop/build/libs/` folder
 This will create an unsigned APK file in the `android/build/outputs/apk` folder. Before you can install or publish this APK, you must [sign it](http://developer.android.com/tools/publishing/app-signing.html). The APK build by the above command is already in release mode, you only need to follow the steps for keytool and jarsigner. You can install this APK file on any Android device that allows [installation from unknown sources](http://developer.android.com/distribute/open.html#unknown-sources). 
 
 ### Packaging for iOS
+
+#### Pre-requisites
+In order to upload the IPA to the app store, it must be signed with your distribution signature and linked to your provisioning profile. 
+You can follow Apple's guide on [app store distribution](https://developer.apple.com/library/ios/documentation/IDEs/Conceptual/AppDistributionGuide/Introduction/Introduction.html) to create provisioning profiles and certificates.
+Once you have done that, you must define them in your root build.gradle file, in your IOS Project
+
+`project(":ios") {`
+
+`apply plugin: "java"`
+
+`apply plugin: "robovm"`
+
+  ` dependencies {`
+
+        compile project(":core")
+
+        compile "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+
+        compile "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+
+        compile "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+
+        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+
+        compile "com.badlogicgames.gdxpay:gdx-pay-iosrobovm-apple:$gdxPayVersion"
+
+    }
+
+    robovm {
+
+        iosSignIdentity = "[Signing identity name]"
+
+        iosProvisioningProfile = "[provisioning profile name]"
+
+        iosSkipSigning = false
+
+        archs = "thumbv7:arm64"
+
+    }
+`}`
+
+- Your provisioning profile name is available in your developer portal (where you created your provisioning profile).
+- Your Signing identity name is available in your keychain, under "My Certificates"
+
+
+#### Packaging
+
+To create your IPA, run 
+
 `gradlew ios:createIPA`
 
+
+
+ 
 This will create an IPA in the `ios/build/robovm` folder that you distribute to the Apple App Store. 
 To upload your app you will need to use the application loader within XCode (Xode->Open Developer Tool->Application loader) 
-You can follow Apple's guide on [app store distribution](https://developer.apple.com/library/ios/documentation/IDEs/Conceptual/AppDistributionGuide/Introduction/Introduction.html)
+
+
 
 Note: as of iOS 11 instead of simply adding your icons into your data folder within your iOS project you need to include an asset Catalog.
 If you do not include one, you can still submit your app but later you receive the following message:
